# SISR-RS-SRGAN

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  config.yaml  config_20m.yaml  inference.py  mkdocs.yml  pyproject.toml  requirements.txt  train.py
.github/: pull_request_template.md
.github/workflows/: build-paper.yml  ci.yml  docs.yml  mkdocs.yml  publish.yml  release.yml
configs/: config.yaml  config_10m.yaml  config_20m.yaml
data/: S2_6b_ds.py  data_utils.py  dataloader_utils.py
data/SEN2AIP/: download_S2N.py
data/SEN2NAIP/: sen2naip_dataset.py
data/SEN2_SAFE/: S2_6b_ds.py
data/utils/: normalizer.py
docs/: architecture.md  configuration.md  data.md  getting-started.md  index.md  inference.md  results.md  trainer-details.md  training-guideline.md  training.md
docs/api-reference/: data.md  index.md  inference.md  model.md  training.md  utils.md
model/: SRGAN.py  SRGAN_advanced.py  __init__.py  flexible_generator.py  loss.py  patchgan.py  srgan_discriminator.py  srresnet.py  training_workflow.txt  vgg.py
model/discriminators/: patchgan.py
model/generators/: SRGAN_advanced.py  __init__.py
model/loss/: __init__.py  loss.py  vgg.py
model/model_blocks/: EMA.py  __init__.py
opensr_gan/: __init__.py  train.py
opensr_gan/data/: data_utils.py
opensr_gan/data/SEN2_SAFE/: S2_6b_ds.py
opensr_gan/data/utils/: normalizer.py
opensr_gan/model/: SRGAN.py
opensr_gan/model/generators/: cgan_generator.py
opensr_gan/model/loss/: loss.py
opensr_gan/model/model_blocks/: EMA.py
opensr_gan/utils/: gpu_rank.py  logging_helpers.py
opensr_srgan/: __init__.py  _factory.py  inference.py  train.py
opensr_srgan/configs/: __init__.py  config_10m.yaml  config_20m.yaml  config_training_example.yaml  rgb_nir.yaml  swir.yaml
opensr_srgan/data/: __init__.py  data_utils.py  dataset_selector.py
opensr_srgan/data/SEN2NAIP/: __init__.py  download_S2N.py
opensr_srgan/data/SEN2_SAFE/: S2_6b_ds.py  __init__.py
opensr_srgan/data/example_data/: download_example_dataset.py  example_dataset.py
opensr_srgan/data/utils/: __init__.py  normalizer.py
opensr_srgan/model/: SRGAN.py  configure_optimizers_PL.py  pretraining_step_PL.py  training_step_PL.py  training_workflow.txt
opensr_srgan/tests/: test_config_instantiation.py  test_data_utils_basic.py  test_factory.py  test_gpu_rank.py  test_import.py  test_inference_basic.py  test_logging_helpers.py  test_loss.py  test_model_variants.py  test_normalizer.py  test_spectral_helpers.py
opensr_srgan/utils/: __init__.py  build_trainer_kwargs.py  gpu_rank.py  logging_helpers.py  model_descriptions.py  radiometrics.py  spectral_helpers.py  tensor_conversions.py
paper/: paper.bib  paper.md
site/: 404.html  index.html
site/architecture/: index.html
site/configuration/: index.html
site/data/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/training/: index.html
tests/: test_config_instantiation.py  test_import.py  test_logging_helpers.py  test_spectral_helpers.py
utils/: __init__.py  export_ckpts.py  logging_helpers.py  model_descriptions.py  spectral_helpers.py
(+22 files in other folders)
