[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensr-srgan"
version = "0.1.20"
description = "Modular Super-Resolution GAN Framework for Remote Sensing."
readme = "README.md"
authors = [
  { name = "Simon Donike, ESAOpenSR Team" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "torch>=1.13,<2.0",
  "pytorch-lightning>=1.9,<2.0",
  "numpy",
  "kornia",
  "wandb",
  "omegaconf",
  "matplotlib",
  "rasterio",
  "scikit-image",
  "Pillow",
  "huggingface-hub",
]
keywords = ["super-resolution", "gan", "remote-sensing", "pytorch", "lightning"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/opensr-project/SISR-RS-SRGAN"
"Documentation" = "https://srgan.opensr.eu"
"Bug Tracker" = "https://github.com/opensr-project/SISR-RS-SRGAN/issues"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
include = ["opensr_srgan", "opensr_srgan.*"]

[tool.setuptools.package-data]
opensr_srgan = [
  "configs/*.yaml",
  "configs/**/*.yaml",
]
