[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensr-srgan"
version = "0.1.39"
description = "Modular Super-Resolution GAN Framework for Remote Sensing."
readme = "README.md"
authors = [
  { name = "Simon Donike, ESAOpenSR Team" }
]
license = { file = "LICENSE" }
requires-python =  ">=3.10,!=3.11.*,<3.13"
dependencies = [
  "torch==1.13.1; python_version < \"3.11\"",
  "torch>=2.1; python_version >= \"3.12\"",
  "pytorch-lightning==1.9.*; python_version < \"3.11\"",
  "pytorch-lightning>=2.1,<3.0; python_version >= \"3.12\"",
  "torchvision",
  "numpy",
  "kornia",
  "wandb",
  "omegaconf",
  "matplotlib",
  "rasterio",
  "scikit-image",
  "Pillow",
  "huggingface-hub",
]
keywords = ["super-resolution", "gan", "remote-sensing", "pytorch", "lightning"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/opensr-project/SISR-RS-SRGAN"
"Documentation" = "https://srgan.opensr.eu"
"Bug Tracker" = "https://github.com/opensr-project/SISR-RS-SRGAN/issues"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
include = ["opensr_srgan", "opensr_srgan.*"]

[tool.setuptools.package-data]
opensr_srgan = [
  "configs/*.yaml",
  "configs/**/*.yaml",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov","numpy"]
docs = ["mkdocs-material"]
